fix: missing hidden label

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/menu.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/menu.html.twig
@@ -4,6 +4,7 @@
     <li class="nav-item dropdown">
         <a class="nav-link" data-bs-toggle="dropdown" href="#">
             <i class="fa fa-eye"></i>
+            <span class="visually-hidden">{{ 'menu.channel.label'|trans }}</span>
         </a>
         <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end">
             {% for channel in channels %}
