--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/side-menu.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/side-menu.html.twig
@@ -25,6 +25,7 @@
             <div class="input-group-append">
                 <button class="btn btn-sidebar">
                     <i class="fas fa-search fa-fw"></i>
+                    <span class="visually-hidden">{{ 'side-menu.search.btn'|trans }}</span>
                 </button>
             </div>
         </div>
