--- a/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
@@ -20,7 +20,7 @@
 
 @import "parts/core";
 @import "parts/components";
-@import "parts/extra-components";
-@import "parts/pages";
-@import "parts/plugins";
+//@import "parts/extra-components";
+//@import "parts/pages";
+//@import "parts/plugins";
 @import "parts/miscellaneous";
