fix: a11y issues and theme color in brand link

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/sidenav.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/sidenav.html.twig
@@ -2,7 +2,7 @@
 
 
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <a href="{{ path('homepage') }}" class="brand-link">
+    <a href="{{ path('homepage') }}" class="brand-link bg-{{ theme_color }}">
         <img src="{{ asset('images/icon-128.png', 'emsadminui') }}" alt="{{ 'elements.sidenav.logo_alt' }}" class="brand-image img-circle elevation-3">
         <span class="brand-text font-weight-light">{{ ems_name|raw }}</span>
     </a>
