--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
@@ -1,6 +1,6 @@
 {%- trans_default_domain 'elements' -%}
 
-<nav class="main-header navbar navbar-expand navbar-{{ theme_color }} navbar-{{ theme_color_contrast }} bg-">
+<nav class="main-header navbar navbar-expand navbar-{{ theme_color }} navbar-{{ theme_color_contrast }}">
     <ul class="navbar-nav">
         <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#" role="button">
