--- a/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
+++ b/EMS/admin-ui-bundle/assets/css/admin-lte/adminlte.scss
@@ -21,6 +21,6 @@
 @import "parts/core";
 @import "parts/components";
 //@import "parts/extra-components";
-//@import "parts/pages";
+@import "parts/pages";
 //@import "parts/plugins";
 @import "parts/miscellaneous";
