--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
@@ -1,9 +1,12 @@
 {%- trans_default_domain 'elements' -%}
 
-<nav class="main-header navbar navbar-expand navbar-white navbar-light">
+<nav class="main-header navbar navbar-expand navbar-{{ theme_color }} navbar-{{ theme_color_contrast }}">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+            <a class="nav-link" data-widget="pushmenu" href="#" role="button">
+                <i class="fas fa-bars"></i>
+                <span class="visually-hidden">{{ 'topbar.mushmenu.label'|trans }}</span>
+            </a>
         </li>
     </ul>
 
@@ -11,6 +14,7 @@
         <li class="nav-item">
             <a class="nav-link" data-widget="navbar-search" href="#" role="button">
                 <i class="fas fa-search"></i>
+                <span class="visually-hidden">{{ 'topbar.search_form.show'|trans }}</span>
             </a>
             <div class="navbar-search-block">
                 <form class="form-inline" action="{{ path('ems_quick_search') }}" method="get">
@@ -19,9 +23,11 @@
                         <div class="input-group-append">
                             <button class="btn btn-navbar" type="submit">
                                 <i class="fas fa-search"></i>
+                                <span class="visually-hidden">{{ 'topbar.search_form.submit'|trans }}</span>
                             </button>
                             <button class="btn btn-navbar" type="button" data-widget="navbar-search">
                                 <i class="fas fa-times"></i>
+                                <span class="visually-hidden">{{ 'topbar.search_form.close'|trans }}</span>
                             </button>
                         </div>
                     </div>
@@ -37,11 +43,13 @@
         <li class="nav-item">
             <a class="nav-link" data-widget="fullscreen" href="#" role="button">
                 <i class="fas fa-expand-arrows-alt"></i>
+                <span class="visually-hidden">{{ 'topbar.fullscreen.toggle'|trans }}</span>
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" data-widget="control-sidebar" data-controlsidebar-slide="true" href="#" role="button">
                 <i id="ajax-activity" class="fa fa-refresh"></i>
+                <span class="visually-hidden">{{ 'topbar.control_sidebar.toggle'|trans }}</span>
             </a>
         </li>
         <li class="nav-item dropdown user-menu">
@@ -52,7 +60,7 @@
                 <span class="d-none d-md-inline">{{ app.user.displayName }}</span>
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-                <li class="user-header">
+                <li class="user-header bg-{{ theme_color }}">
                     {% include '@EMSCore/elements/user-image.html.twig' with {
                         'class': 'rounded-circle shadow'
                     } %}
