feat: bootstrap 5 user profile

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/topbar.html.twig
@@ -5,7 +5,7 @@
         <li class="nav-item">
             <a class="nav-link" data-widget="pushmenu" href="#" role="button">
                 <i class="fas fa-bars"></i>
-                <span class="visually-hidden">{{ 'topbar.mushmenu.label'|trans }}</span>
+                <span class="visually-hidden">{{ 'topbar.pushmenu.label'|trans }}</span>
             </a>
         </li>
     </ul>
