feat: add tag to contentType action

--- a/EMS/core-bundle/src/Resources/views/action/form.html.twig
+++ b/EMS/core-bundle/src/Resources/views/action/form.html.twig
@@ -50,6 +50,9 @@
                         {{ form_row(form.orientation) }}
                         {{ form_row(form.size) }}
                     </div>
+                    <div class="job">
+                        {{ form_row(form.tag) }}
+                    </div>
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer">
