--- a/demo/skeleton/template/redirects/media_files.json.twig
+++ b/demo/skeleton/template/redirects/media_files.json.twig
@@ -1,9 +1,14 @@
 {%- block request %}
     {% apply spaceless %}
         {{ {
-            path: ems_asset_path(source.media_file, {
-                _get_file_path: true,
-            }),
+            controller: 'EMS\\CommonBundle\\Controller\\FileController::view',
+            path: {
+               sha1: source.media_file.sha1,
+            },
+            query: {
+                name: source.media_file.filename|default(null),
+                type: source.media_file.mimetype|default(null),
+            },
         }|json_encode|raw }}
     {% endapply %}
 {% endblock request -%}
