--- a/demo/skeleton/template/redirects/media_files.json.twig
+++ b/demo/skeleton/template/redirects/media_files.json.twig
@@ -1,9 +1,10 @@
 {%- block request %}
     {% apply spaceless %}
         {{ {
-            path: ems_asset_path(source.media_file, {
-                _get_file_path: true,
-            }),
+            controller: 'EMS\\CommonBundle\\Controller\\FileController::resolveAsset',
+            path: {
+               fileField: source.media_file,
+            },
         }|json_encode|raw }}
     {% endapply %}
 {% endblock request -%}
