fix(core/tasks): add delay field to task form.
Only show the delay field on creation or updating planned tasks. Else we show the deadline (in progress, completed, rejected, approved)

--- a/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/task/ajax.twig
@@ -207,8 +207,12 @@
     {{ form_start(form) }}
     <div class="row">
         <div class="col-md-12">{{ form_row(form.title) }}</div>
-        <div class="col-md-6">{{ form_row(form.assignee) }}</div>
-        <div class="col-md-6">{{ form_row(form.deadline) }}</div>
+        <div class="col-md-8">{{ form_row(form.assignee) }}</div>
+        {% if form.delay is defined %}
+            <div class="col-md-4">{{ form_row(form.delay) }}</div>
+        {% elseif form.deadline is defined %}
+            <div class="col-md-4">{{ form_row(form.deadline) }}</div>
+        {% endif %}
         <div class="col-md-12">{{ form_row(form.description) }}</div>
     </div>
     {{ form_end(form) }}
