feat: first implementation load structure async
Plus styling

--- a/EMS/core-bundle/assets/css/app.scss
+++ b/EMS/core-bundle/assets/css/app.scss
@@ -30,6 +30,7 @@ $ionicons-font-path: $node-modules-path + "ionicons/dist/fonts/";
 
 @import "ems";
 @import "./component/media_library";
+@import "./component/json_menu_nested";
 @import "./modules/tasks";
 @import "./modules/spacer";
 @import "./modules/flags";
