--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
@@ -1,3 +1,5 @@
 {% trans_default_domain 'emsco-component' %}
 
+{# @var template \EMS\CoreBundle\Core\Component\JsonMenuNested\Template\JsonMenuNestedTemplate #}
+
 <div class="json-menu-nested-component" id="{{ id }}" data-hash="{{ hash }}"></div>
