--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
@@ -15,8 +15,8 @@
             {% endif %}
             {{ include('@EMSAdminUI/bootstrap5/elements/topbar.html.twig') }}
             {{ include('@EMSAdminUI/bootstrap5/elements/sidenav.html.twig') }}
-
             <div class="content-wrapper">
+                {{ include('@EMSAdminUI/bootstrap5/elements/toasts.html.twig') }}
                 <div class="content-header">
                     <div class="container-fluid">
                         <div class="row mb-2">
