--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/admin.html.twig
@@ -5,6 +5,21 @@
     class: 'hold-transition sidebar-mini layout-fixed',
 } %}
 {%  set theme_color_contrast = theme_color in ['yellow','lime','white','cyan'] ? 'light' : 'dark' %}
+{% set breadcrumb = [] %}
+
+{% block breadcrumb %}
+    {% if breadcrumb|length > 1 %}
+        <ol class="breadcrumb float-sm-end">
+            {% for key, label in breadcrumb %}
+                {% if loop.last %}
+                    <li class="breadcrumb-item active">{{ label }}</li>
+                {% else %}
+                    <li class="breadcrumb-item"><a href="{{ key }}">{{ label }}</a></li>
+                {% endif %}
+            {% endfor %}
+        </ol>
+    {% endif %}
+{% endblock breadcrumb %}
 
 {% block body %}
     {% apply spaceless %}
@@ -24,10 +39,7 @@
                                 <h1 class="m-0">{{ block('title') }}</h1>
                             </div>
                             <div class="col-sm-6">
-                                <ol class="breadcrumb float-sm-end">
-                                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                    <li class="breadcrumb-item active">Dashboard v1</li>
-                                </ol>
+                                {{ block('breadcrumb') }}
                             </div>
                         </div>
                     </div>
