--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/change_password.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/change_password.html.twig
@@ -1,7 +1,12 @@
-{% extends '@EMSAdminUI/bootstrap5/base/admin.html.twig' %}
+{% extends '@EMSAdminUI/bootstrap5/user/profile/show.html.twig' %}
 {%- trans_default_domain 'user' -%}
 
-{% block title %}{{ 'user.change_password.title'|trans }}{% endblock %}
+{% block title %}{{ 'user.profile.change_password.title'|trans }}{% endblock %}
+
+{% block breadcrumb %}
+    {% set breadcrumb = {(path('emsco_user_profile_edit')): 'user.profile.change_password.title'|trans}|merge(breadcrumb)  %}
+    {{ parent() }}
+{% endblock breadcrumb %}
 
 {% block content %}
     <div class="row">
@@ -15,8 +20,8 @@
                     </div>
                     <div class="card-footer">
                         {{ form_row(form._token) }}
-                        <input type="submit" value="{{ 'user.change_password.submit'|trans }}" class="btn btn-primary"/>
-                        <a href="{{ path(routes.USER_PROFILE) }}" class="btn float-end btn-default">{{ 'user.change_password.cancel'|trans }}</a>
+                        <input type="submit" value="{{ 'user.profile.change_password.submit'|trans }}" class="btn btn-primary"/>
+                        <a href="{{ path(routes.USER_PROFILE) }}" class="btn float-end btn-default">{{ 'user.profile.change_password.cancel'|trans }}</a>
                     </div>
                 {{ form_end(form) }}
             </div>
