--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
@@ -21,7 +21,7 @@
                     <p class="text-muted text-center">{{ user.username }}</p>
                     <ul class="list-group list-group-unbordered mb-3">
                         <li class="list-group-item">
-                            <b>{{ 'user.profile.show.login'|trans }}</b> <i class="float-end">{{ user.username }}</i>
+                            <b>{{ 'user.profile.show.username'|trans }}</b> <i class="float-end">{{ user.username }}</i>
                         </li>
                         <li class="list-group-item">
                             <b>{{ 'user.profile.show.display_name'|trans }}</b> <i class="float-end">{{ user.displayName }}</i>
