--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/user/profile/show.html.twig
@@ -15,7 +15,9 @@
             <div class="card card-{{ theme_color }} card-outline">
                 <div class="card-body box-profile">
                     <div class="text-center">
-                        <img class="profile-user-img img-responsive img-circle" src="https://www.gravatar.com/avatar/{{ app.user.email|lower|md5 }}?d={{ "https://www.gravatar.com/avatar"|url_encode }}" alt="{{ 'user.profile.show.alt.user_profile_picture'|trans }}">
+                        {% include '@EMSAdminUI/bootstrap5/elements/user-image.html.twig' with {
+                            'class': 'profile-user-img img-responsive img-circle'
+                        } %}
                     </div>
                     <h3 class="profile-username text-center">{{ user.displayName }}</h3>
                     <p class="text-muted text-center">{{ user.username }}</p>
