--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
@@ -4,6 +4,7 @@
 
 <div class="json-menu-nested-component" id="{{ id }}" data-hash="{{ hash }}">
     <div class="jmn-wrapper">
+        <div class="jmn-node-loading"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></div>
         {{ template.block('_header')|raw }}
         {{ template.block('_tree')|raw }}
     </div>
