--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/template.twig
@@ -34,6 +34,9 @@
                     </div>
                 {% endfor %}
             </div>
+            {% if node.leaf == false %}
+                <div class="jmn-children {{ item.hasChildren == false ? 'jmn-children-empty' }}"></div>
+            {% endif %}
         </div>
     {%- endapply -%}
 {%- endblock _itemRow -%}
