--- a/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
+++ b/EMS/core-bundle/src/Resources/views/components/json_menu_nested/component.html.twig
@@ -6,6 +6,6 @@
     <div class="jmn-wrapper">
         <div class="jmn-node-loading"><i class="fa fa-cog fa-spin fa-3x fa-fw"></i></div>
         {{ template.block('_header')|raw }}
-        {{ template.block('_tree')|raw }}
+        <div id="{{- "tree-#{id}" -}}" class="jmn-tree jmn-sortable"></div>
     </div>
 </div>
