--- a/EMS/core-bundle/assets/css/component/json_menu_nested.scss
+++ b/EMS/core-bundle/assets/css/component/json_menu_nested.scss
@@ -1,35 +1,46 @@
 .json-menu-nested-component {
     --border-color: #d7d7d7;
+    --border-radius: 5px;
     --gap: 10px;
     --icon-size: 30px;
     --bg-color: #F0F0F0;
     --color-light: #F8F8F8;
     --collapse-icon-size: calc(var(--gap) + var(--icon-size));
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
+
+    .jmn-node-loading {
+        position: absolute;
+        z-index: 1000;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color:rgba(248, 248, 248, 0.3);
+        color: var(--border-color);
+        text-align: center;
+        font-size: 1em;
+    }
 
     .jmn-wrapper {
         position: relative;
         display: inline-table;
         width: 100%;
+        border: 1px solid var(--border-color);
+        border-radius: var(--border-radius);
+        overflow-x: scroll;
+    }
 
-        .jmn-node-loading {
-            position: absolute;
-            z-index: 1000;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color:rgba(248, 248, 248, 0.3);
-            color: var(--border-color);
-            text-align: center;
-            font-size: 1em;
-        }
+    .jmn-header {
+        border-top-right-radius: var(--border-radius);
+        border-top-left-radius: var(--border-radius);
+        background-color: var(--bg-color);
+        border-bottom: 1px solid var(--border-color);
     }
 
     .jmn-tree {
         overflow-x: clip;
+        border-bottom-right-radius: var(--border-radius);
+        border-bottom-left-radius: var(--border-radius);
         min-height: calc(var(--gap) + var(--icon-size) + var(--gap));
 
         > .jmn-node.jmn-collapsible { padding-left: 0; }
@@ -58,10 +69,6 @@
         }
     }
 
-    .jmn-header {
-        background-color: var(--bg-color);
-        border-bottom: 1px solid var(--border-color);
-    }
     .jmn-header, .jmn-row {
         display: flex;
         justify-content: flex-end;
